<resources>
    <string name="app_name">Gestor</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">INICIA O REGISTRATE</string>
    <string name="action_sign_in_short">INICIA</string>
    <string name="welcome">"Bienvenid@! !"</string>
    <string name="invalid_username">Correo inválido</string>
    <string name="invalid_password">Contraseña debe tener más de 5 carácteres</string>
    <string name="login_failed">"INICIO FALLIDO"</string>
    <!-- Strings related to app fields -->
    <string name="nombre_contratista">Nombre contratista</string>
    <string name="c_digo_contrato">Código contrato</string>
    <string name="c_digo_api">Código API</string>
    <string name="mantenci_n_de_personas">MANTENCIÓN DE PERSONAS</string>
    <string name="mantenci_n_de_m_quinas">MANTENCIÓN DE MÁQUINAS</string>
    <string name="plan_de_obra_diaria">PLAN DE OBRA DIARIA</string>
    <string name="cambiar_contrato">CAMBIAR CONTRATO</string>
    <string name="cerrar_sesi_n">CERRAR SESIÓN</string>
    <string name="gesti_n_de_personas">GESTIÓN DE PERSONAS</string>
    <string name="nombre_rut">NOMBRE / RUT</string>
    <string name="nombre">NOMBRE</string>
    <string name="cargo">CARGO</string>
    <string name="status">STATUS</string>
    <string name="informaci_n">INFORMACIÓN</string>
    <string name="documentos">DOCUMENTOS</string>
    <string name="detalle_nombre">DETALLE NOMBRE</string>
    <string name="informaci_n_escalable">INFORMACIÓN ESCALABLE</string>
    <string name="tipo">TIPO</string>
    <string name="documento">DOCUMENTO</string>
    <string name="c_digo_interno">CÓDIGO INTERNO</string>
    <string name="marca">MARCA</string>
    <string name="patente">PATENTE</string>
    <string name="modelo">MODELO</string>
    <string name="cod_marca_patente_modelo">COD / MARCA / PATENTE / MODELO</string>
    <string name="gesti_n_de_equipos">GESTIÓN DE EQUIPOS</string>
    <string name="gesti_n_de_obras">GESTIÓN DE OBRAS</string>
    <string name="nombre_capataz">NOMBRE CAPATAZ</string>
    <string name="nombre_tarea">NOMBRE TAREA</string>
    <string name="c_digo_de_contrato">CÓDIGO DE CONTRATO</string>
    <string name="contratista">CONTRATISTA</string>
    <string name="c_digo_itu">CÓDIGO ITU</string>
    <string name="gesti_n">GESTIÓN</string>
    <string name="gestionar_interrupci_n">GESTIONAR INTERRUPCIÓN</string>
    <string name="acciones_de_gesti_n">ACCIONES DE GESTIÓN</string>
    <string name="guardar">GUARDAR</string>
    <string name="plus">+</string>
    <string name="ltima_ubicaci_n">ÚLTIMA UBICACIÓN</string>
    <string name="ubicaci_n">UBICACIÓN</string>
    <string name="especialidad">ESPECIALIDAD</string>
    <string name="b_squeda_de_tareas">BÚSQUEDA DE TAREAS</string>
    <string name="detalle_de_tarea">DETALLE DE TAREA</string>
    <string name="interrupciones">INTERRUPCIONES</string>
    <string name="informaci_n_de_la_ltima_gesti_n_de_la_interrupcion">INFORMACIÓN DE LA ÚLTIMA GESTIÓN DE LA INTERRUPCION</string>
    <string name="acciones_de_interrupci_n">ACCIONES DE INTERRUPCIÓN</string>
    <string name="finalizar_tarea">FINALIZAR TAREA</string>
    <string name="revisi_n_de_tarea">REVISIÓN DE TAREA</string>
    <string name="_100">/ 100</string>
    <string name="incompleta">INCOMPLETA</string>
    <string name="completa">COMPLETA</string>
    <string name="completada">COMPLETADA</string>
    <string name="revisar_tarea">REVISAR TAREA</string>
    <string name="log_de_la_tarea">LOG DE LA TAREA</string>
    <string name="notificar">NOTIFICAR</string>
    <string name="acci_n">ACCIÓN</string>
    <string name="descripci_n">DESCRIPCIÓN</string>
    <string name="causa_probable">CAUSA PROBABLE</string>
    <string name="_0">0</string>
    <string name="c_digo">CÓDIGO</string>
    <string name="ito">ITO</string>
    <string name="hora_programada_inicio">HORA PROGRAMADA INICIO</string>
    <string name="hora_programada_fin">HORA PROGRAMADA FIN</string>
    <string name="iniciar">INICIAR</string>
    <string name="interrupci_n">INTERRUPCIÓN</string>
    <string name="seleccionar_hora">SELECCIONAR HORA</string>
    <string name="terminar">TERMINAR</string>
    <string name="causa">CAUSA</string>
    <string name="termino">TERMINO</string>
    <string name="se_puede_terminar">Se puede terminar?</string>
    <string name="continuar">CONTINUAR</string>
    <string name="responsable">RESPONSABLE</string>
    <string name="es_ud_el_responsable">Es Ud. el responsable?</string>
    <string name="qui_n_es_el_responsable">Quién es el responsable?</string>
    <string name="se_puede_terminar_hoy">Se puede terminar hoy?</string>
    <string name="categoria">CATEGORIA</string>
    <string name="capacitados">CAPACITADOS</string>
    <string name="nombre_contrato">Nombre contrato</string>
    <string name="listado_de_personal">LISTADO DE PERSONAL</string>
    <string name="listado_de_equipos_y_maquinaria">LISTADO DE EQUIPOS Y MAQUINARIA</string>
    <string name="no_hay_documentos">No hay documentos</string>
    <string name="listado_de_equipos">LISTADO DE EQUIPOS</string>
    <string name="nombre_de_contrato">NOMBRE DE CONTRATO</string>
    <string name="operadores_autorizados">Operadores Autorizados</string>
    <string name="progreso">Progreso</string>
    <string name="rea_contrato">ÁREA CONTRATO</string>
    <string name="no_definido">No definido</string>
    <string name="causa_seleccionada">Causa seleccionada</string>
    <string name="confirmar_causa">CONFIRMAR CAUSA</string>
    <string name="guion">-</string>
    <string name="layout">LAYOUT</string>
    <string name="x">X</string>
    <string name="x_dospuntos">X:</string>
    <string name="y_dospuntos">Y:</string>
    <string name="tareas_completadas">TAREAS COMPLETADAS: </string>
    <string name="n_mero_etiqueta">Número - Etiqueta</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="informaci_n_layout">Información Layouts</string>
    <string name="gauge_chart">Gauge Chart</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="ubicaci_n_de_tareas">UBICACIÓN DE TAREAS</string>
    <string name="capataz">CAPATAZ</string>

</resources>
