<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:background="@drawable/rounded_button_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageview_maquinas_item"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:src="@drawable/imagen"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/textview_maquinas_item_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textColor="@color/colorWhite"/>
            <TextView
                android:id="@+id/textview_maquinas_item_codigo_interno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c_digo_interno"
                android:textColor="@color/colorWhite"/>
            <TextView
                android:id="@+id/textview_maquinas_item_marca"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marca"
                android:textColor="@color/colorWhite"/>
            <TextView
                android:id="@+id/textview_maquinas_item_modelo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modelo"
                android:textColor="@color/colorWhite"/>
            <TextView
                android:id="@+id/textview_maquinas_item_patente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patente"
                android:textColor="@color/colorWhite"/>
            <TextView
                android:id="@+id/textview_maquinas_item_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@color/colorWhite"/>

        </LinearLayout>

    </LinearLayout>

    <lecho.lib.hellocharts.view.PieChartView
        android:id="@+id/chart"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"/>


</LinearLayout>
