<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:background="@drawable/rounded_button_green">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/textview_pod_item_nombre_tarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/nombre_tarea"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/textview_pod_item_codigo_contratista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contratista"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:id="@+id/textview_pods_item_codigo_contrato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_digo_de_contrato"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:id="@+id/textview_pod_item_codigo_itu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_digo_itu"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

</LinearLayout>

