<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="100sp"
android:orientation="horizontal"
android:layout_gravity="center_horizontal"
android:layout_marginTop="20dp"
android:layout_marginBottom="20dp"
android:layout_marginRight="20dp"
android:layout_marginLeft="20dp"
android:background="@drawable/rounded_button_blue">

    <ImageView
        android:id="@+id/imageview_personas_item"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:src="@drawable/imagen"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/textview_personas_item_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:id="@+id/textview_personas_item_cargo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cargo"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:id="@+id/textview_personas_item_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

</LinearLayout>

