<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PodDetalleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:elevation="4dp"

            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"

            app:contentInsetStart="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"

            tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start">

                    <Button
                        android:id="@+id/button_pod_detalle_atras"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/ic_arrow_back_white_24dp"
                        android:backgroundTint="@color/colorWhite" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gesti_n_de_obras"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                </LinearLayout>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/rounded_button_blue">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="15sp"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp">

                <TextView
                    android:id="@+id/textview_pod_detalle_nombre_tarea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_tarea"
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:id="@+id/textview_pod_detalle_contratista"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contratista"
                    android:textColor="@color/colorWhite"
                    android:layout_marginTop="15sp"/>
                <TextView
                    android:id="@+id/textview_pod_detalle_codigo_contrato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c_digo_de_contrato"
                    android:textColor="@color/colorWhite" />
                <TextView
                    android:id="@+id/textview_pod_detalle_codigo_ITU"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c_digo_itu"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15sp"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp">

                <TextView
                    android:id="@+id/textview_pod_detalle_informacion_escalable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/informaci_n_escalable"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/rounded_button_blue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gesti_n"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/button_pod_gestionar_interrupcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/gestionar_interrupci_n"
                android:textColor="@color/colorWhite"
                android:background="@drawable/rounded_button_gray"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/rounded_button_blue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acciones_de_gesti_n"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:layout_marginTop="20dp"/>

            <Spinner
                android:id="@+id/spinner_pod_status"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/colorBlue"
                android:backgroundTint="@color/colorWhite"
                android:spinnerMode="dropdown" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">

                <EditText
                    android:id="@+id/edittext_pod_tipo"
                    android:layout_width="0dp"
                    android:layout_height="50sp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/button_pod_anadir"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:layout_marginStart="20sp"
                    android:text="@string/plus"
                    android:textColor="@color/colorWhite"
                    android:textSize="30sp"
                    android:background="@drawable/rounded_button_gray" />

            </LinearLayout>

            <Button
                android:id="@+id/button_pod_guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/guardar"
                android:textColor="@color/colorWhite"
                android:background="@drawable/rounded_button_gray"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>